compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__guards__clause_guards32.snap
---
source: compiler-core/src/erlang/tests/guards.rs
expression: "\npub fn main() {\n  let wibble = \"wobble\"\n  case wibble {\n    x if x == \"wob\" <> \"ble\" -> 1\n    _ -> 0\n  }\n}\n"
---
----- SOURCE CODE

pub fn main() {
  let wibble = "wobble"
  case wibble {
    x if x == "wob" <> "ble" -> 1
    _ -> 0
  }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    Wibble = ~"wobble",
    case Wibble of
        X when X =:= <<"wob"/utf8, "ble"/utf8>> ->
            1;

        _ ->
            0
    end.
